--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<h1>Primera actualizacion</h1>
 <header>
     <div class="logo">
         <img src="img/logo.png" alt="Logo de Chef en Casa">
