--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Primera actualizacion</h1>
+<h2>Segunda actualizacion</h2>
 <header>
     <div class="logo">
         <img src="img/logo.png" alt="Logo de Chef en Casa">
