--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<h1>Primera actualizacion</h1>
+<h2>Primera actualizacion</h2>
 <h2>Segunda actualizacion</h2>
+<h2>Tercera actualizacion</h2>
 <header>
     <div class="logo">
         <img src="img/logo.png" alt="Logo de Chef en Casa">
