--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Segunda actualizacion</h2>
 <h2>Tercera actualizacion</h2>
 
-<h3> Esta es la segunda rama, y ojala la ultima</h3>
+<h3> Tercera rama, y tristemente no la ultima</h3>
 <header>
     <div class="logo">
         <img src="img/logo.png" alt="Logo de Chef en Casa">
