--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <h2>Primera actualizacion</h2>
 <h2>Segunda actualizacion</h2>
 <h2>Tercera actualizacion</h2>
+
 <header>
     <div class="logo">
         <img src="img/logo.png" alt="Logo de Chef en Casa">
     </div>
     <div class="title">
+        <h3> Esta es la segunda rama, y ojala la ultima</h3>
         <h1>Chef en Casa</h1>
     </div>
     <nav>
